// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Game Play > (1) Player 8143_Rowan places tile [6E] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] | 
P5031_Nate | $6000 | [5D] [10D] [9C] [2F] [8E] | 

P8143_Rowan [End Turn]
`;

exports[`Game Play > (2) Player 8143_Rowan ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [5G] | 
P5031_Nate | $6000 | [5D] [10D] [9C] [2F] [8E] | 

P5031_Nate [Choose Tile: [5D] [10D] [9C] [2F] [8E]]
`;

exports[`Game Play > (3) Player 5031_Nate places tile [8E] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [5G] | 
P5031_Nate | $6000 | [5D] [10D] [9C] [2F] | 

P5031_Nate [End Turn]
`;

exports[`Game Play > (4) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [5G] | 
P5031_Nate | $6000 | [5D] [10D] [9C] [2F] [1H] | 

P8143_Rowan [Choose Tile: [12E] [4C] [12A] [6A] [5G]]
`;

exports[`Game Play > (5) Player 8143_Rowan places tile [5G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] | 
P5031_Nate | $6000 | [5D] [10D] [9C] [2F] [1H] | 

P8143_Rowan [End Turn]
`;

exports[`Game Play > (6) Player 8143_Rowan ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [11A] | 
P5031_Nate | $6000 | [5D] [10D] [9C] [2F] [1H] | 

P5031_Nate [Choose Tile: [5D] [10D] [9C] [2F] [1H]]
`;

exports[`Game Play > (7) Player 5031_Nate places tile [9C] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [11A] | 
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] | 

P5031_Nate [End Turn]
`;

exports[`Game Play > (8) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [11A] | 
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [10G] | 

P8143_Rowan [Choose Tile: [12E] [4C] [12A] [6A] [11A]]
`;

exports[`Game Play > (9) Player 8143_Rowan places tile [11A] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] | 
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [10G] | 

P8143_Rowan [End Turn]
`;

exports[`Game Play > (10) Player 8143_Rowan ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [11H] | 
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [10G] | 

P5031_Nate [Choose Tile: [5D] [10D] [2F] [1H] [10G]]
`;

exports[`Game Play > (11) Player 5031_Nate places tile [10G] 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [11H] | 
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] | 

P5031_Nate [End Turn]
`;

exports[`Game Play > (12) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - 0 -
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [12A] [6A] [11H] | 
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [4D] | 

P8143_Rowan [Choose Tile: [12E] [4C] [12A] [6A] [11H]]
`;

exports[`Game Play > (13) Player 8143_Rowan places tile [12A] 1`] = `
 - - - - - - - - - - 0 0
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [6A] [11H] | 
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [4D] | 

P8143_Rowan [Choose Hotel: A C F I W T L]
`;

exports[`Game Play > (14) Player 8143_Rowan starts American 1`] = `
 - - - - - - - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $6000 | [12E] [4C] [6A] [11H] | A:1
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [4D] | 

P8143_Rowan [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (15) Player 8143_Rowan purchases American 1`] = `
 - - - - - - - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $5700 | [12E] [4C] [6A] [11H] | A:2
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [4D] | 

P8143_Rowan [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (16) Player 8143_Rowan purchases American 1`] = `
 - - - - - - - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $5400 | [12E] [4C] [6A] [11H] | A:3
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [4D] | 

P8143_Rowan [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (17) Player 8143_Rowan purchases American 1`] = `
 - - - - - - - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $5100 | [12E] [4C] [6A] [11H] | A:4
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [4D] | 

P8143_Rowan [End Turn]
`;

exports[`Game Play > (18) Player 8143_Rowan ends turn 1`] = `
 - - - - - - - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - - - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $5100 | [12E] [4C] [6A] [11H] [7A] | A:4
P5031_Nate | $6000 | [5D] [10D] [2F] [1H] [4D] | 

P5031_Nate [Choose Tile: [5D] [10D] [2F] [1H] [4D]]
`;

exports[`Game Play > (19) Player 5031_Nate places tile [5D] 1`] = `
 - - - - - - - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $5100 | [12E] [4C] [6A] [11H] [7A] | A:4
P5031_Nate | $6000 | [10D] [2F] [1H] [4D] | 

P5031_Nate [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (20) Player 5031_Nate purchases American 1`] = `
 - - - - - - - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $5100 | [12E] [4C] [6A] [11H] [7A] | A:4
P5031_Nate | $5700 | [10D] [2F] [1H] [4D] | A:1

P5031_Nate [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (21) Player 5031_Nate ends turn 1`] = `
 - - - - - - - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $5100 | [12E] [4C] [6A] [11H] [7A] | A:4
P5031_Nate | $5700 | [10D] [2F] [1H] [4D] [6H] | A:1

P8143_Rowan [Choose Tile: [12E] [4C] [6A] [11H] [7A]]
`;

exports[`Game Play > (22) Player 8143_Rowan places tile [6A] 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $5100 | [12E] [4C] [11H] [7A] | A:4
P5031_Nate | $5700 | [10D] [2F] [1H] [4D] [6H] | A:1

P8143_Rowan [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (23) Player 8143_Rowan purchases American 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4800 | [12E] [4C] [11H] [7A] | A:5
P5031_Nate | $5700 | [10D] [2F] [1H] [4D] [6H] | A:1

P8143_Rowan [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (24) Player 8143_Rowan purchases American 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4500 | [12E] [4C] [11H] [7A] | A:6
P5031_Nate | $5700 | [10D] [2F] [1H] [4D] [6H] | A:1

P8143_Rowan [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (25) Player 8143_Rowan purchases American 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [7A] | A:7
P5031_Nate | $5700 | [10D] [2F] [1H] [4D] [6H] | A:1

P8143_Rowan [End Turn]
`;

exports[`Game Play > (26) Player 8143_Rowan ends turn 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [7A] [12F] | A:7
P5031_Nate | $5700 | [10D] [2F] [1H] [4D] [6H] | A:1

P5031_Nate [Choose Tile: [10D] [2F] [1H] [4D] [6H]]
`;

exports[`Game Play > (27) Player 5031_Nate places tile [4D] 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - 0 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [7A] [12F] | A:7
P5031_Nate | $5700 | [10D] [2F] [1H] [6H] | A:1

P5031_Nate [Choose Hotel: C F I W T L]
`;

exports[`Game Play > (28) Player 5031_Nate starts Festival 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [7A] [12F] | A:7
P5031_Nate | $5700 | [10D] [2F] [1H] [6H] | A:1 F:1

P5031_Nate [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (29) Player 5031_Nate purchases Festival 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [7A] [12F] | A:7
P5031_Nate | $5400 | [10D] [2F] [1H] [6H] | A:1 F:2

P5031_Nate [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (30) Player 5031_Nate purchases Festival 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [7A] [12F] | A:7
P5031_Nate | $5100 | [10D] [2F] [1H] [6H] | A:1 F:3

P5031_Nate [Choose Shares: A F] [End Turn]
`;

exports[`Game Play > (31) Player 5031_Nate ends turn 1`] = `
 - - - - - 0 - - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [7A] [12F] | A:7
P5031_Nate | $5100 | [10D] [2F] [1H] [6H] [5I] | A:1 F:3

P8143_Rowan [Choose Tile: [12E] [4C] [11H] [7A] [12F]]
`;

exports[`Game Play > (32) Player 8143_Rowan places tile [7A] 1`] = `
 - - - - - 0 0 - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [12F] | A:7
P5031_Nate | $5100 | [10D] [2F] [1H] [6H] [5I] | A:1 F:3

P8143_Rowan [Choose Hotel: C I W T L]
`;

exports[`Game Play > (33) Player 8143_Rowan starts Continental 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $4200 | [12E] [4C] [11H] [12F] | A:7 C:1
P5031_Nate | $5100 | [10D] [2F] [1H] [6H] [5I] | A:1 F:3

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (34) Player 8143_Rowan purchases Continental 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $3800 | [12E] [4C] [11H] [12F] | A:7 C:2
P5031_Nate | $5100 | [10D] [2F] [1H] [6H] [5I] | A:1 F:3

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (35) Player 8143_Rowan purchases Continental 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $3400 | [12E] [4C] [11H] [12F] | A:7 C:3
P5031_Nate | $5100 | [10D] [2F] [1H] [6H] [5I] | A:1 F:3

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (36) Player 8143_Rowan purchases Continental 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $3000 | [12E] [4C] [11H] [12F] | A:7 C:4
P5031_Nate | $5100 | [10D] [2F] [1H] [6H] [5I] | A:1 F:3

P8143_Rowan [End Turn]
`;

exports[`Game Play > (37) Player 8143_Rowan ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $3000 | [12E] [4C] [11H] [12F] [1F] | A:7 C:4
P5031_Nate | $5100 | [10D] [2F] [1H] [6H] [5I] | A:1 F:3

P5031_Nate [Choose Tile: [10D] [2F] [1H] [6H] [5I]]
`;

exports[`Game Play > (38) Player 5031_Nate places tile [6H] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $3000 | [12E] [4C] [11H] [12F] [1F] | A:7 C:4
P5031_Nate | $5100 | [10D] [2F] [1H] [5I] | A:1 F:3

P5031_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (39) Player 5031_Nate purchases Continental 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $3000 | [12E] [4C] [11H] [12F] [1F] | A:7 C:4
P5031_Nate | $4700 | [10D] [2F] [1H] [5I] | A:1 C:1 F:3

P5031_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (40) Player 5031_Nate ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -

P8143_Rowan | $3000 | [12E] [4C] [11H] [12F] [1F] | A:7 C:4
P5031_Nate | $4700 | [10D] [2F] [1H] [5I] [3B] | A:1 C:1 F:3

P8143_Rowan [Choose Tile: [12E] [4C] [11H] [12F] [1F]]
`;

exports[`Game Play > (41) Player 8143_Rowan places tile [11H] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $3000 | [12E] [4C] [12F] [1F] | A:7 C:4
P5031_Nate | $4700 | [10D] [2F] [1H] [5I] [3B] | A:1 C:1 F:3

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (42) Player 8143_Rowan purchases Continental 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $2600 | [12E] [4C] [12F] [1F] | A:7 C:5
P5031_Nate | $4700 | [10D] [2F] [1H] [5I] [3B] | A:1 C:1 F:3

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (43) Player 8143_Rowan purchases American 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $2300 | [12E] [4C] [12F] [1F] | A:8 C:5
P5031_Nate | $4700 | [10D] [2F] [1H] [5I] [3B] | A:1 C:1 F:3

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (44) Player 8143_Rowan purchases Festival 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $2000 | [12E] [4C] [12F] [1F] | A:8 C:5 F:1
P5031_Nate | $4700 | [10D] [2F] [1H] [5I] [3B] | A:1 C:1 F:3

P8143_Rowan [End Turn]
`;

exports[`Game Play > (45) Player 8143_Rowan ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $2000 | [12E] [4C] [12F] [1F] [2C] | A:8 C:5 F:1
P5031_Nate | $4700 | [10D] [2F] [1H] [5I] [3B] | A:1 C:1 F:3

P5031_Nate [Choose Tile: [10D] [2F] [1H] [5I] [3B]]
`;

exports[`Game Play > (46) Player 5031_Nate places tile [10D] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $2000 | [12E] [4C] [12F] [1F] [2C] | A:8 C:5 F:1
P5031_Nate | $4700 | [2F] [1H] [5I] [3B] | A:1 C:1 F:3

P5031_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (47) Player 5031_Nate purchases Festival 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $2000 | [12E] [4C] [12F] [1F] [2C] | A:8 C:5 F:1
P5031_Nate | $4400 | [2F] [1H] [5I] [3B] | A:1 C:1 F:4

P5031_Nate [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (48) Player 5031_Nate ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $2000 | [12E] [4C] [12F] [1F] [2C] | A:8 C:5 F:1
P5031_Nate | $4400 | [2F] [1H] [5I] [3B] [4G] | A:1 C:1 F:4

P8143_Rowan [Choose Tile: [12E] [4C] [12F] [1F] [2C]]
`;

exports[`Game Play > (49) Player 8143_Rowan places tile [12E] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $2000 | [4C] [12F] [1F] [2C] | A:8 C:5 F:1
P5031_Nate | $4400 | [2F] [1H] [5I] [3B] [4G] | A:1 C:1 F:4

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (50) Player 8143_Rowan purchases Festival 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1700 | [4C] [12F] [1F] [2C] | A:8 C:5 F:2
P5031_Nate | $4400 | [2F] [1H] [5I] [3B] [4G] | A:1 C:1 F:4

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (51) Player 8143_Rowan purchases Continental 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [4C] [12F] [1F] [2C] | A:8 C:6 F:2
P5031_Nate | $4400 | [2F] [1H] [5I] [3B] [4G] | A:1 C:1 F:4

P8143_Rowan [Choose Shares: A C F] [End Turn]
`;

exports[`Game Play > (52) Player 8143_Rowan ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - - 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [4C] [12F] [1F] [2C] [11I] | A:8 C:6 F:2
P5031_Nate | $4400 | [2F] [1H] [5I] [3B] [4G] | A:1 C:1 F:4

P5031_Nate [Choose Tile: [2F] [1H] [5I] [3B] [4G]]
`;

exports[`Game Play > (53) Player 5031_Nate places tile [4G] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - 0 0 - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [4C] [12F] [1F] [2C] [11I] | A:8 C:6 F:2
P5031_Nate | $4400 | [2F] [1H] [5I] [3B] | A:1 C:1 F:4

P5031_Nate [Choose Hotel: I W T L]
`;

exports[`Game Play > (54) Player 5031_Nate starts Worldwide 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [4C] [12F] [1F] [2C] [11I] | A:8 C:6 F:2
P5031_Nate | $4400 | [2F] [1H] [5I] [3B] | A:1 C:1 F:4 W:1

P5031_Nate [Choose Shares: A C F W] [End Turn]
`;

exports[`Game Play > (55) Player 5031_Nate purchases Festival 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [4C] [12F] [1F] [2C] [11I] | A:8 C:6 F:2
P5031_Nate | $4100 | [2F] [1H] [5I] [3B] | A:1 C:1 F:5 W:1

P5031_Nate [Choose Shares: A C F W] [End Turn]
`;

exports[`Game Play > (56) Player 5031_Nate purchases Worldwide 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [4C] [12F] [1F] [2C] [11I] | A:8 C:6 F:2
P5031_Nate | $3800 | [2F] [1H] [5I] [3B] | A:1 C:1 F:5 W:2

P5031_Nate [Choose Shares: A C F W] [End Turn]
`;

exports[`Game Play > (57) Player 5031_Nate purchases Worldwide 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [4C] [12F] [1F] [2C] [11I] | A:8 C:6 F:2
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] | A:1 C:1 F:5 W:3

P5031_Nate [End Turn]
`;

exports[`Game Play > (58) Player 5031_Nate ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - - - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [4C] [12F] [1F] [2C] [11I] | A:8 C:6 F:2
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] [3F] | A:1 C:1 F:5 W:3

P8143_Rowan [Choose Tile: [4C] [12F] [1F] [2C] [11I]]
`;

exports[`Game Play > (59) Player 8143_Rowan places tile [4C] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [12F] [1F] [2C] [11I] | A:8 C:6 F:2
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] [3F] | A:1 C:1 F:5 W:3

P8143_Rowan [Choose Shares: A C F W] [End Turn]
`;

exports[`Game Play > (60) Player 8143_Rowan ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - - - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [12F] [1F] [2C] [11I] [12C] | A:8 C:6 F:2
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] [3F] | A:1 C:1 F:5 W:3

P5031_Nate [Choose Tile: [2F] [1H] [5I] [3B] [3F]]
`;

exports[`Game Play > (61) Player 5031_Nate places tile [3F] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [12F] [1F] [2C] [11I] [12C] | A:8 C:6 F:2
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] | A:1 C:1 F:5 W:3

P5031_Nate [Choose Shares: A C F W] [End Turn]
`;

exports[`Game Play > (62) Player 5031_Nate ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - - - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [12F] [1F] [2C] [11I] [12C] | A:8 C:6 F:2
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] [7H] | A:1 C:1 F:5 W:3

P8143_Rowan [Choose Tile: [12F] [1F] [2C] [11I] [12C]]
`;

exports[`Game Play > (63) Player 8143_Rowan places tile [2C] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $1300 | [12F] [1F] [11I] [12C] | A:8 C:6 F:2
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] [7H] | A:1 C:1 F:5 W:3

P8143_Rowan [Choose Shares: A C F W] [End Turn]
`;

exports[`Game Play > (64) Player 8143_Rowan purchases Festival 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [12F] [1F] [11I] [12C] | A:8 C:6 F:3
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] [7H] | A:1 C:1 F:5 W:3

P8143_Rowan [Choose Shares: A C F W] [End Turn]
`;

exports[`Game Play > (65) Player 8143_Rowan ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 - - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [12F] [1F] [11I] [12C] [7I] | A:8 C:6 F:3
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] [7H] | A:1 C:1 F:5 W:3

P5031_Nate [Choose Tile: [2F] [1H] [5I] [3B] [7H]]
`;

exports[`Game Play > (66) Player 5031_Nate places tile [7H] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - 0 0 - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [12F] [1F] [11I] [12C] [7I] | A:8 C:6 F:3
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] | A:1 C:1 F:5 W:3

P5031_Nate [Choose Hotel: I T L]
`;

exports[`Game Play > (67) Player 5031_Nate starts Imperial 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [12F] [1F] [11I] [12C] [7I] | A:8 C:6 F:3
P5031_Nate | $3500 | [2F] [1H] [5I] [3B] | A:1 C:1 F:5 I:1 W:3

P5031_Nate [Choose Shares: A C F I W] [End Turn]
`;

exports[`Game Play > (68) Player 5031_Nate purchases Imperial 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [12F] [1F] [11I] [12C] [7I] | A:8 C:6 F:3
P5031_Nate | $3100 | [2F] [1H] [5I] [3B] | A:1 C:1 F:5 I:2 W:3

P5031_Nate [Choose Shares: A C F I W] [End Turn]
`;

exports[`Game Play > (69) Player 5031_Nate purchases Imperial 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [12F] [1F] [11I] [12C] [7I] | A:8 C:6 F:3
P5031_Nate | $2700 | [2F] [1H] [5I] [3B] | A:1 C:1 F:5 I:3 W:3

P5031_Nate [Choose Shares: A C F I W] [End Turn]
`;

exports[`Game Play > (70) Player 5031_Nate ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - -
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [12F] [1F] [11I] [12C] [7I] | A:8 C:6 F:3
P5031_Nate | $2700 | [2F] [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 W:3

P8143_Rowan [Choose Tile: [12F] [1F] [11I] [12C] [7I]]
`;

exports[`Game Play > (71) Player 8143_Rowan places tile [12F] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - 0
 - - 0 - - - - - - - - 0
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [1F] [11I] [12C] [7I] | A:8 C:6 F:3
P5031_Nate | $2700 | [2F] [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 W:3

P8143_Rowan [Choose Hotel: T L]
`;

exports[`Game Play > (72) Player 8143_Rowan starts Luxor 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - - 0 - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $900 | [1F] [11I] [12C] [7I] | A:8 C:6 F:3 L:1
P5031_Nate | $2700 | [2F] [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 W:3

P8143_Rowan [Choose Shares: A C F I W L] [End Turn]
`;

exports[`Game Play > (73) Player 8143_Rowan purchases Luxor 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - - 0 - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [12C] [7I] | A:8 C:6 F:3 L:2
P5031_Nate | $2700 | [2F] [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 W:3

P8143_Rowan [Choose Shares: A C F I W L] [End Turn]
`;

exports[`Game Play > (74) Player 8143_Rowan ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - - 0 - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [12C] [7I] [7E] | A:8 C:6 F:3 L:2
P5031_Nate | $2700 | [2F] [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 W:3

P5031_Nate [Choose Tile: [2F] [1H] [5I] [3B] [2A]]
`;

exports[`Game Play > (75) Player 5031_Nate places tile [2F] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - 0 0 - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [12C] [7I] [7E] | A:8 C:6 F:3 L:2
P5031_Nate | $2700 | [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 W:3

P5031_Nate [Choose Hotel: T]
`;

exports[`Game Play > (76) Player 5031_Nate starts Tower 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [12C] [7I] [7E] | A:8 C:6 F:3 L:2
P5031_Nate | $2700 | [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 T:1 W:3

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (77) Player 5031_Nate purchases Tower 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [12C] [7I] [7E] | A:8 C:6 F:3 L:2
P5031_Nate | $2500 | [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 T:2 W:3

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (78) Player 5031_Nate purchases Tower 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [12C] [7I] [7E] | A:8 C:6 F:3 L:2
P5031_Nate | $2300 | [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 T:3 W:3

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (79) Player 5031_Nate ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - -
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [12C] [7I] [7E] | A:8 C:6 F:3 L:2
P5031_Nate | $2300 | [1H] [5I] [3B] [2A] [6G] | A:1 C:1 F:5 I:3 T:3 W:3

P8143_Rowan [Choose Tile: [1F] [12C] [7I] (unavailable: [11I] [7E])]
`;

exports[`Game Play > (80) Player 8143_Rowan places tile [12C] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] | A:8 C:6 F:3 L:2
P5031_Nate | $2300 | [1H] [5I] [3B] [2A] [6G] | A:1 C:1 F:5 I:3 T:3 W:3

P8143_Rowan [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (81) Player 8143_Rowan ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - W W - - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $2300 | [1H] [5I] [3B] [2A] [6G] | A:1 C:1 F:5 I:3 T:3 W:3

P5031_Nate [Choose Tile: [1H] [5I] [3B] [2A] [6G]]
`;

exports[`Game Play > (82) Player 5031_Nate places tile [6G] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - W W 0 - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $2300 | [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 T:3 W:3

P5031_Nate [Merge: I W]
`;

exports[`Game Play > (83) Player 5031_Nate merges Imperial 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $6800 | [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:3 T:3 W:3

P5031_Nate [Sell (1/3) Worldwide Share] [Keep (1/3) Worldwide Share] [Trade (2/3) Worldwide for 1 Imperial]
`;

exports[`Game Play > (84) Player 5031_Nate trades 2 Worldwide -> Imperial 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $6800 | [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:4 T:3 W:1

P5031_Nate [Sell (1/1) Worldwide Share] [Keep (1/1) Worldwide Share]
`;

exports[`Game Play > (85) Player 5031_Nate keeps 1 orphaned Worldwide share 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $6800 | [1H] [5I] [3B] [2A] | A:1 C:1 F:5 I:4 T:3 W:1

P5031_Nate [Choose Shares: A C F I T L] [End Turn]
`;

exports[`Game Play > (86) Player 5031_Nate purchases Festival 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $6400 | [1H] [5I] [3B] [2A] | A:1 C:1 F:6 I:4 T:3 W:1

P5031_Nate [Choose Shares: A C F I T L] [End Turn]
`;

exports[`Game Play > (87) Player 5031_Nate purchases Tower 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $6200 | [1H] [5I] [3B] [2A] | A:1 C:1 F:6 I:4 T:4 W:1

P5031_Nate [Choose Shares: A C F I T L] [End Turn]
`;

exports[`Game Play > (88) Player 5031_Nate purchases Luxor 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $6000 | [1H] [5I] [3B] [2A] | A:1 C:1 F:6 I:4 L:1 T:4 W:1

P5031_Nate [End Turn]
`;

exports[`Game Play > (89) Player 5031_Nate ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - - -

P8143_Rowan | $700 | [1F] [11I] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $6000 | [1H] [5I] [3B] [2A] [5C] | A:1 C:1 F:6 I:4 L:1 T:4 W:1

P8143_Rowan [Choose Tile: [1F] [11I] [7I] [7E] [4A]]
`;

exports[`Game Play > (90) Player 8143_Rowan places tile [11I] 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - 0 -
 - - - - - - - - - - 0 -

P8143_Rowan | $700 | [1F] [7I] [7E] [4A] | A:8 C:6 F:3 L:2
P5031_Nate | $6000 | [1H] [5I] [3B] [2A] [5C] | A:1 C:1 F:6 I:4 L:1 T:4 W:1

P8143_Rowan [Choose Hotel: W]
`;

exports[`Game Play > (91) Player 8143_Rowan starts Worldwide 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $700 | [1F] [7I] [7E] [4A] | A:8 C:6 F:3 L:2 W:1
P5031_Nate | $6000 | [1H] [5I] [3B] [2A] [5C] | A:1 C:1 F:6 I:4 L:1 T:4 W:1

P8143_Rowan [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (92) Player 8143_Rowan purchases Worldwide 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $400 | [1F] [7I] [7E] [4A] | A:8 C:6 F:3 L:2 W:2
P5031_Nate | $6000 | [1H] [5I] [3B] [2A] [5C] | A:1 C:1 F:6 I:4 L:1 T:4 W:1

P8143_Rowan [Choose Shares: A C F W T L] [End Turn]
`;

exports[`Game Play > (93) Player 8143_Rowan purchases Worldwide 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [4A] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $6000 | [1H] [5I] [3B] [2A] [5C] | A:1 C:1 F:6 I:4 L:1 T:4 W:1

P8143_Rowan [End Turn]
`;

exports[`Game Play > (94) Player 8143_Rowan ends turn 1`] = `
 - - - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [4A] [11D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $6000 | [1H] [5I] [3B] [2A] [5C] | A:1 C:1 F:6 I:4 L:1 T:4 W:1

P5031_Nate [Choose Tile: [1H] [5I] [3B] [2A] [5C]]
`;

exports[`Game Play > (95) Player 5031_Nate places tile [2A] 1`] = `
 - 0 - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [4A] [11D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $6000 | [1H] [5I] [3B] [5C] | A:1 C:1 F:6 I:4 L:1 T:4 W:1

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (96) Player 5031_Nate purchases Luxor 1`] = `
 - 0 - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [4A] [11D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $5800 | [1H] [5I] [3B] [5C] | A:1 C:1 F:6 I:4 L:2 T:4 W:1

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (97) Player 5031_Nate purchases Luxor 1`] = `
 - 0 - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [4A] [11D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $5600 | [1H] [5I] [3B] [5C] | A:1 C:1 F:6 I:4 L:3 T:4 W:1

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (98) Player 5031_Nate purchases Worldwide 1`] = `
 - 0 - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [4A] [11D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $5300 | [1H] [5I] [3B] [5C] | A:1 C:1 F:6 I:4 L:3 T:4 W:2

P5031_Nate [End Turn]
`;

exports[`Game Play > (99) Player 5031_Nate ends turn 1`] = `
 - 0 - - - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [4A] [11D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $5300 | [1H] [5I] [3B] [5C] [1E] | A:1 C:1 F:6 I:4 L:3 T:4 W:2

P8143_Rowan [Choose Tile: [1F] [7I] [4A] (unavailable: [7E] [11D])]
`;

exports[`Game Play > (100) Player 8143_Rowan places tile [4A] 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $5300 | [1H] [5I] [3B] [5C] [1E] | A:1 C:1 F:6 I:4 L:3 T:4 W:2

P8143_Rowan [End Turn]
`;

exports[`Game Play > (101) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F - - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9H] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $5300 | [1H] [5I] [3B] [5C] [1E] | A:1 C:1 F:6 I:4 L:3 T:4 W:2

P5031_Nate [Choose Tile: [1H] [5I] [3B] [5C] [1E]]
`;

exports[`Game Play > (102) Player 5031_Nate places tile [5C] 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9H] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $5300 | [1H] [5I] [3B] [1E] | A:1 C:1 F:6 I:4 L:3 T:4 W:2

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (103) Player 5031_Nate purchases Festival 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9H] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $4800 | [1H] [5I] [3B] [1E] | A:1 C:1 F:7 I:4 L:3 T:4 W:2

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (104) Player 5031_Nate purchases Worldwide 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9H] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $4500 | [1H] [5I] [3B] [1E] | A:1 C:1 F:7 I:4 L:3 T:4 W:3

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (105) Player 5031_Nate purchases Worldwide 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9H] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $4200 | [1H] [5I] [3B] [1E] | A:1 C:1 F:7 I:4 L:3 T:4 W:4

P5031_Nate [End Turn]
`;

exports[`Game Play > (106) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - - - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9H] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $4200 | [1H] [5I] [3B] [1E] [7D] | A:1 C:1 F:7 I:4 L:3 T:4 W:4

P8143_Rowan [Choose Tile: [1F] [7I] [9H] (unavailable: [7E] [11D])]
`;

exports[`Game Play > (107) Player 8143_Rowan places tile [9H] 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $4200 | [1H] [5I] [3B] [1E] [7D] | A:1 C:1 F:7 I:4 L:3 T:4 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (108) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - - - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $4200 | [1H] [5I] [3B] [1E] [7D] | A:1 C:1 F:7 I:4 L:3 T:4 W:4

P5031_Nate [Choose Tile: [1H] [5I] [3B] [1E] [7D]]
`;

exports[`Game Play > (109) Player 5031_Nate places tile [7D] 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $4200 | [1H] [5I] [3B] [1E] | A:1 C:1 F:7 I:4 L:3 T:4 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (110) Player 5031_Nate purchases Luxor 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $4000 | [1H] [5I] [3B] [1E] | A:1 C:1 F:7 I:4 L:4 T:4 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (111) Player 5031_Nate purchases Imperial 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [1H] [5I] [3B] [1E] | A:1 C:1 F:7 I:5 L:4 T:4 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (112) Player 5031_Nate purchases Imperial 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [5I] [3B] [1E] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P5031_Nate [End Turn]
`;

exports[`Game Play > (113) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 - T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [1F] [7I] [7E] [11D] [9D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [5I] [3B] [1E] [1G] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P8143_Rowan [Choose Tile: [1F] [7I] (unavailable: [7E] [11D] [9D])]
`;

exports[`Game Play > (114) Player 8143_Rowan places tile [1F] 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [5I] [3B] [1E] [1G] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (115) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - - - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [5E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [5I] [3B] [1E] [1G] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P5031_Nate [Choose Tile: [1H] [5I] [3B] [1E] [1G]]
`;

exports[`Game Play > (116) Player 5031_Nate places tile [5I] 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [5E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [3B] [1E] [1G] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (117) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - - 0 - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [5E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [3B] [1E] [1G] [3C] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P8143_Rowan [Choose Tile: [7I] [5E] (unavailable: [7E] [11D] [9D])]
`;

exports[`Game Play > (118) Player 8143_Rowan places tile [5E] 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - F F - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [3B] [1E] [1G] [3C] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (119) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - - - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - F F - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [8A] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [3B] [1E] [1G] [3C] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P5031_Nate [Choose Tile: [1H] [3B] [1E] [1G] [3C]]
`;

exports[`Game Play > (120) Player 5031_Nate places tile [3B] 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - F F - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [8A] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2600 | [1H] [1E] [1G] [3C] | A:1 C:1 F:7 I:6 L:4 T:4 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (121) Player 5031_Nate purchases Imperial 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - F F - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [8A] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $1900 | [1H] [1E] [1G] [3C] | A:1 C:1 F:7 I:7 L:4 T:4 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (122) Player 5031_Nate purchases Imperial 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - F F - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [8A] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $1200 | [1H] [1E] [1G] [3C] | A:1 C:1 F:7 I:8 L:4 T:4 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (123) Player 5031_Nate purchases Tower 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - F F - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [8A] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1E] [1G] [3C] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [End Turn]
`;

exports[`Game Play > (124) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - 0 - - 0 - -
 - - - - F F - 0 - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [7E] [11D] [9D] [8A] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1E] [1G] [3C] [2G] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [Choose Tile: [7I] [7E] [8A] (unavailable: [11D] [9D])]
`;

exports[`Game Play > (125) Player 8143_Rowan places tile [7E] 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - F - - 0 - -
 - - - - F F F F - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [8A] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1E] [1G] [3C] [2G] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (126) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - F - - 0 - -
 - - - - F F F F - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [8A] [12B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1E] [1G] [3C] [2G] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Tile: [1H] [1E] [1G] [3C] [2G]]
`;

exports[`Game Play > (127) Player 5031_Nate places tile [1E] 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [8A] [12B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1G] [3C] [2G] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (128) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C - - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [8A] [12B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1G] [3C] [2G] [7B] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [Choose Tile: [7I] [8A] [12B] (unavailable: [11D] [9D])]
`;

exports[`Game Play > (129) Player 8143_Rowan places tile [8A] 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [12B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1G] [3C] [2G] [7B] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (130) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 - - - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [12B] [2E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1G] [3C] [2G] [7B] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Tile: [1H] [1G] [3C] [2G] [7B]]
`;

exports[`Game Play > (131) Player 5031_Nate places tile [2G] 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 - T - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [12B] [2E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1G] [3C] [7B] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (132) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - -
 - 0 - F F - - - 0 - - 0
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 - T - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [12B] [2E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1G] [3C] [7B] [11C] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [Choose Tile: [7I] [12B] [2E] (unavailable: [11D] [9D])]
`;

exports[`Game Play > (133) Player 8143_Rowan places tile [12B] 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 - T - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1G] [3C] [7B] [11C] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (134) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 - T - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [3I] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [1G] [3C] [7B] [11C] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Tile: [1H] [1G] [3C] [7B] [11C]]
`;

exports[`Game Play > (135) Player 5031_Nate places tile [1G] 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [3I] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [3C] [7B] [11C] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (136) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - - - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [3I] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [3C] [7B] [11C] [8G] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [Choose Tile: [7I] [2E] [3I] (unavailable: [11D] [9D])]
`;

exports[`Game Play > (137) Player 8143_Rowan places tile [3I] 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [3C] [7B] [11C] [8G] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (138) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - - - 0 - -
 - - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [1B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [3C] [7B] [11C] [8G] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Tile: [1H] [3C] [7B] [11C] [8G]]
`;

exports[`Game Play > (139) Player 5031_Nate places tile [8G] 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 - - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [1B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [3C] [7B] [11C] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (140) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 - - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 - - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [1B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [3C] [7B] [11C] [3H] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [Choose Tile: [7I] [2E] [1B] (unavailable: [11D] [9D])]
`;

exports[`Game Play > (141) Player 8143_Rowan places tile [1B] 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 - - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [3C] [7B] [11C] [3H] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (142) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 - - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [4F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [1H] [3C] [7B] [11C] [3H] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Tile: [1H] [3C] [7B] [11C] (unavailable: [3H])]
`;

exports[`Game Play > (143) Player 5031_Nate places tile [1H] 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [4F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [3C] [7B] [11C] [3H] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (144) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T - - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [2E] [4F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [3C] [7B] [11C] [3H] [11E] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [Choose Tile: [7I] [2E] [4F] (unavailable: [11D] [9D])]
`;

exports[`Game Play > (145) Player 8143_Rowan places tile [2E] 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T T - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [4F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [3C] [7B] [11C] [3H] [11E] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P8143_Rowan [End Turn]
`;

exports[`Game Play > (146) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T T - - F F F F - - - L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [4F] [11F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [3C] [7B] [11C] [3H] [11E] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Tile: [3C] [7B] [11C] [11E] (unavailable: [3H])]
`;

exports[`Game Play > (147) Player 5031_Nate places tile [11E] 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [4F] [11F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $900 | [3C] [7B] [11C] [3H] | A:1 C:1 F:7 I:8 L:4 T:5 W:4

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (148) Player 5031_Nate purchases Worldwide 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [4F] [11F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $600 | [3C] [7B] [11C] [3H] | A:1 C:1 F:7 I:8 L:4 T:5 W:5

P5031_Nate [Choose Shares: A C W T L] [End Turn]
`;

exports[`Game Play > (149) Player 5031_Nate purchases Luxor 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [4F] [11F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $300 | [3C] [7B] [11C] [3H] | A:1 C:1 F:7 I:8 L:5 T:5 W:5

P5031_Nate [Choose Shares: W L] [End Turn]
`;

exports[`Game Play > (150) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - 0 - -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [11D] [9D] [4F] [11F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $300 | [3C] [7B] [11C] [3H] [10B] | A:1 C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Choose Tile: [7I] [11D] [4F] [11F] (unavailable: [9D])]
`;

exports[`Game Play > (151) Player 8143_Rowan places tile [11D] 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [9D] [4F] [11F] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $300 | [3C] [7B] [11C] [3H] [10B] | A:1 C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [End Turn]
`;

exports[`Game Play > (152) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C C - - A A
 0 - 0 - - - - - - - - A
 - 0 - F F - - - 0 - - A
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $100 | [7I] [9D] [4F] [11F] [4B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $300 | [3C] [7B] [11C] [3H] [10B] | A:1 C:1 F:7 I:8 L:5 T:5 W:5

P5031_Nate [Choose Tile: [3C] [7B] [11C] [10B] (unavailable: [3H])]
`;

exports[`Game Play > (153) Player 5031_Nate places tile [11C] 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5100 | [7I] [9D] [4F] [11F] [4B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $2800 | [3C] [7B] [3H] [10B] | A:1 C:1 F:7 I:8 L:5 T:5 W:5

P5031_Nate [Sell (1/1) American Share] [Keep (1/1) American Share]
`;

exports[`Game Play > (154) Player 5031_Nate sells 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5100 | [7I] [9D] [4F] [11F] [4B] | A:8 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Sell (1/8) American Share] [Keep (1/8) American Share] [Trade (2/8) American for 1 Luxor]
`;

exports[`Game Play > (155) Player 8143_Rowan sells 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5600 | [7I] [9D] [4F] [11F] [4B] | A:7 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Sell (1/7) American Share] [Keep (1/7) American Share] [Trade (2/7) American for 1 Luxor]
`;

exports[`Game Play > (156) Player 8143_Rowan keeps 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5600 | [7I] [9D] [4F] [11F] [4B] | A:7 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Sell (1/6) American Share] [Keep (1/6) American Share] [Trade (2/6) American for 1 Luxor]
`;

exports[`Game Play > (157) Player 8143_Rowan keeps 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5600 | [7I] [9D] [4F] [11F] [4B] | A:7 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Sell (1/5) American Share] [Keep (1/5) American Share] [Trade (2/5) American for 1 Luxor]
`;

exports[`Game Play > (158) Player 8143_Rowan keeps 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5600 | [7I] [9D] [4F] [11F] [4B] | A:7 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Sell (1/4) American Share] [Keep (1/4) American Share] [Trade (2/4) American for 1 Luxor]
`;

exports[`Game Play > (159) Player 8143_Rowan keeps 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5600 | [7I] [9D] [4F] [11F] [4B] | A:7 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Sell (1/3) American Share] [Keep (1/3) American Share] [Trade (2/3) American for 1 Luxor]
`;

exports[`Game Play > (160) Player 8143_Rowan keeps 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5600 | [7I] [9D] [4F] [11F] [4B] | A:7 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Sell (1/2) American Share] [Keep (1/2) American Share] [Trade (2/2) American for 1 Luxor]
`;

exports[`Game Play > (161) Player 8143_Rowan keeps 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $5600 | [7I] [9D] [4F] [11F] [4B] | A:7 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P8143_Rowan [Sell (1/1) American Share] [Keep (1/1) American Share]
`;

exports[`Game Play > (162) Player 8143_Rowan sells 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $6100 | [7I] [9D] [4F] [11F] [4B] | A:6 C:6 F:3 L:2 W:3
P5031_Nate | $3300 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:5

P5031_Nate [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (163) Player 5031_Nate purchases Worldwide 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $6100 | [7I] [9D] [4F] [11F] [4B] | A:6 C:6 F:3 L:2 W:3
P5031_Nate | $3000 | [3C] [7B] [3H] [10B] | C:1 F:7 I:8 L:5 T:5 W:6

P5031_Nate [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (164) Player 5031_Nate purchases Continental 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $6100 | [7I] [9D] [4F] [11F] [4B] | A:6 C:6 F:3 L:2 W:3
P5031_Nate | $2500 | [3C] [7B] [3H] [10B] | C:2 F:7 I:8 L:5 T:5 W:6

P5031_Nate [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (165) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - - - - - W -

P8143_Rowan | $6100 | [7I] [9D] [4F] [11F] [4B] | A:6 C:6 F:3 L:2 W:3
P5031_Nate | $2500 | [3C] [7B] [3H] [10B] [10H] | C:2 F:7 I:8 L:5 T:5 W:6

P8143_Rowan [Choose Tile: [7I] [9D] [4F] [11F] [4B]]
`;

exports[`Game Play > (166) Player 8143_Rowan places tile [7I] 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - I - - - W -

P8143_Rowan | $6100 | [9D] [4F] [11F] [4B] | A:6 C:6 F:3 L:2 W:3
P5031_Nate | $2500 | [3C] [7B] [3H] [10B] [10H] | C:2 F:7 I:8 L:5 T:5 W:6

P8143_Rowan [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (167) Player 8143_Rowan purchases Imperial 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - I - - - W -

P8143_Rowan | $5300 | [9D] [4F] [11F] [4B] | A:6 C:6 F:3 I:1 L:2 W:3
P5031_Nate | $2500 | [3C] [7B] [3H] [10B] [10H] | C:2 F:7 I:8 L:5 T:5 W:6

P8143_Rowan [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (168) Player 8143_Rowan purchases Imperial 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - I - - - W -

P8143_Rowan | $4500 | [9D] [4F] [11F] [4B] | A:6 C:6 F:3 I:2 L:2 W:3
P5031_Nate | $2500 | [3C] [7B] [3H] [10B] [10H] | C:2 F:7 I:8 L:5 T:5 W:6

P8143_Rowan [Choose Shares: C F I W T L] [End Turn]
`;

exports[`Game Play > (169) Player 8143_Rowan purchases Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - I - - - W -

P8143_Rowan | $3900 | [9D] [4F] [11F] [4B] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $2500 | [3C] [7B] [3H] [10B] [10H] | C:2 F:7 I:8 L:5 T:5 W:6

P8143_Rowan [End Turn]
`;

exports[`Game Play > (170) Player 8143_Rowan ends turn 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - - - - I I - 0 - W -
 - - 0 - 0 - I - - - W -

P8143_Rowan | $3900 | [9D] [4F] [11F] [4B] [3G] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $2500 | [3C] [7B] [3H] [10B] [10H] | C:2 F:7 I:8 L:5 T:5 W:6

P5031_Nate [Choose Tile: [3C] [7B] [3H] [10B] [10H]]
`;

exports[`Game Play > (171) Player 5031_Nate places tile [3H] 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - 0 - - I I - 0 - W -
 - - 0 - 0 - I - - - W -

P8143_Rowan | $3900 | [9D] [4F] [11F] [4B] [3G] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $2500 | [3C] [7B] [10B] [10H] | C:2 F:7 I:8 L:5 T:5 W:6

P5031_Nate [Choose Hotel: A]
`;

exports[`Game Play > (172) Player 5031_Nate starts American 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - A - - I I - 0 - W -
 - - A - 0 - I - - - W -

P8143_Rowan | $3900 | [9D] [4F] [11F] [4B] [3G] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $2500 | [3C] [7B] [10B] [10H] | A:1 C:2 F:7 I:8 L:5 T:5 W:6

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (173) Player 5031_Nate purchases Imperial 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - A - - I I - 0 - W -
 - - A - 0 - I - - - W -

P8143_Rowan | $3900 | [9D] [4F] [11F] [4B] [3G] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $1700 | [3C] [7B] [10B] [10H] | A:1 C:2 F:7 I:9 L:5 T:5 W:6

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (174) Player 5031_Nate purchases Imperial 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - A - - I I - 0 - W -
 - - A - 0 - I - - - W -

P8143_Rowan | $3900 | [9D] [4F] [11F] [4B] [3G] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $900 | [3C] [7B] [10B] [10H] | A:1 C:2 F:7 I:10 L:5 T:5 W:6

P5031_Nate [Choose Shares: A C F I W T L] [End Turn]
`;

exports[`Game Play > (175) Player 5031_Nate purchases Imperial 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - A - - I I - 0 - W -
 - - A - 0 - I - - - W -

P8143_Rowan | $3900 | [9D] [4F] [11F] [4B] [3G] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $100 | [3C] [7B] [10B] [10H] | A:1 C:2 F:7 I:11 L:5 T:5 W:6

P5031_Nate [End Turn]
`;

exports[`Game Play > (176) Player 5031_Nate ends turn 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T - I I I - 0 - 0 - -
 T - A - - I I - 0 - W -
 - - A - 0 - I - - - W -

P8143_Rowan | $3900 | [9D] [4F] [11F] [4B] [3G] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $100 | [3C] [7B] [10B] [10H] [3A] | A:1 C:2 F:7 I:11 L:5 T:5 W:6

P8143_Rowan [Choose Tile: [9D] [4F] [11F] [4B] [3G]]
`;

exports[`Game Play > (177) Player 8143_Rowan places tile [3G] 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $10900 | [9D] [4F] [11F] [4B] | A:6 C:6 F:3 I:2 L:2 T:1 W:3
P5031_Nate | $9600 | [3C] [7B] [10B] [10H] [3A] | A:1 C:2 F:7 I:11 L:5 T:5 W:6

P8143_Rowan [Sell (1/6) American Share] [Keep (1/6) American Share] [Trade (2/6) American for 1 Tower]
`;

exports[`Game Play > (178) Player 8143_Rowan trades 2 American -> Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $10900 | [9D] [4F] [11F] [4B] | A:4 C:6 F:3 I:2 L:2 T:2 W:3
P5031_Nate | $9600 | [3C] [7B] [10B] [10H] [3A] | A:1 C:2 F:7 I:11 L:5 T:5 W:6

P8143_Rowan [Sell (1/4) American Share] [Keep (1/4) American Share] [Trade (2/4) American for 1 Tower]
`;

exports[`Game Play > (179) Player 8143_Rowan trades 2 American -> Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $10900 | [9D] [4F] [11F] [4B] | A:2 C:6 F:3 I:2 L:2 T:3 W:3
P5031_Nate | $9600 | [3C] [7B] [10B] [10H] [3A] | A:1 C:2 F:7 I:11 L:5 T:5 W:6

P8143_Rowan [Sell (1/2) American Share] [Keep (1/2) American Share] [Trade (2/2) American for 1 Tower]
`;

exports[`Game Play > (180) Player 8143_Rowan keeps 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $10900 | [9D] [4F] [11F] [4B] | A:2 C:6 F:3 I:2 L:2 T:3 W:3
P5031_Nate | $9600 | [3C] [7B] [10B] [10H] [3A] | A:1 C:2 F:7 I:11 L:5 T:5 W:6

P8143_Rowan [Sell (1/1) American Share] [Keep (1/1) American Share]
`;

exports[`Game Play > (181) Player 8143_Rowan sells 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 I:2 L:2 T:3 W:3
P5031_Nate | $9600 | [3C] [7B] [10B] [10H] [3A] | A:1 C:2 F:7 I:11 L:5 T:5 W:6

P8143_Rowan [Sell (1/2) Imperial Share] [Keep (1/2) Imperial Share] [Trade (2/2) Imperial for 1 Tower]
`;

exports[`Game Play > (182) Player 8143_Rowan trades 2 Imperial -> Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 L:2 T:4 W:3
P5031_Nate | $9600 | [3C] [7B] [10B] [10H] [3A] | A:1 C:2 F:7 I:11 L:5 T:5 W:6

P5031_Nate [Sell (1/1) American Share] [Keep (1/1) American Share]
`;

exports[`Game Play > (183) Player 5031_Nate sells 1 orphaned American share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 L:2 T:4 W:3
P5031_Nate | $9900 | [3C] [7B] [10B] [10H] [3A] | C:2 F:7 I:11 L:5 T:5 W:6

P5031_Nate [Sell (1/11) Imperial Share] [Keep (1/11) Imperial Share] [Trade (2/11) Imperial for 1 Tower]
`;

exports[`Game Play > (184) Player 5031_Nate sells 1 orphaned Imperial share 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 L:2 T:4 W:3
P5031_Nate | $10700 | [3C] [7B] [10B] [10H] [3A] | C:2 F:7 I:10 L:5 T:5 W:6

P5031_Nate [Sell (1/10) Imperial Share] [Keep (1/10) Imperial Share] [Trade (2/10) Imperial for 1 Tower]
`;

exports[`Game Play > (185) Player 5031_Nate trades 2 Imperial -> Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 L:2 T:4 W:3
P5031_Nate | $10700 | [3C] [7B] [10B] [10H] [3A] | C:2 F:7 I:8 L:5 T:6 W:6

P5031_Nate [Sell (1/8) Imperial Share] [Keep (1/8) Imperial Share] [Trade (2/8) Imperial for 1 Tower]
`;

exports[`Game Play > (186) Player 5031_Nate trades 2 Imperial -> Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 L:2 T:4 W:3
P5031_Nate | $10700 | [3C] [7B] [10B] [10H] [3A] | C:2 F:7 I:6 L:5 T:7 W:6

P5031_Nate [Sell (1/6) Imperial Share] [Keep (1/6) Imperial Share] [Trade (2/6) Imperial for 1 Tower]
`;

exports[`Game Play > (187) Player 5031_Nate trades 2 Imperial -> Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 L:2 T:4 W:3
P5031_Nate | $10700 | [3C] [7B] [10B] [10H] [3A] | C:2 F:7 I:4 L:5 T:8 W:6

P5031_Nate [Sell (1/4) Imperial Share] [Keep (1/4) Imperial Share] [Trade (2/4) Imperial for 1 Tower]
`;

exports[`Game Play > (188) Player 5031_Nate trades 2 Imperial -> Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 L:2 T:4 W:3
P5031_Nate | $10700 | [3C] [7B] [10B] [10H] [3A] | C:2 F:7 I:2 L:5 T:9 W:6

P5031_Nate [Sell (1/2) Imperial Share] [Keep (1/2) Imperial Share] [Trade (2/2) Imperial for 1 Tower]
`;

exports[`Game Play > (189) Player 5031_Nate trades 2 Imperial -> Tower 1`] = `
 - 0 - 0 - C C C - - L L
 0 - 0 - - - - - - - - L
 - 0 - F F - - - 0 - L L
 - - - F F - F - - L L -
 T T - - F F F F - - L L
 T T T - - - - - - - - L
 T T T T T T - 0 - 0 - -
 T - T - - T T - 0 - W -
 - - T - 0 - T - - - W -

P8143_Rowan | $11200 | [9D] [4F] [11F] [4B] | A:1 C:6 F:3 L:2 T:4 W:3
P5031_Nate | $10700 | [3C] [7B] [10B] [10H] [3A] | C:2 F:7 L:5 T:10 W:6

P8143_Rowan [Choose Shares: C F W T L] [End Turn]
`;
